fix: aligning of labels

--- a/src/Components/Global/Graphic/infoBlocks.scss
+++ b/src/Components/Global/Graphic/infoBlocks.scss
@@ -41,6 +41,8 @@
 .tgl-btns-info.positive_negative {
   top: -78px;
   right: -65px;
+  width: 160px;
+  text-align: center;
 }
 
 .tgl-btns-info::before {
